# tap-exchangerate

./: .gitignore  setup.cfg
tap_exchangerate/: __init__.py  __main__.py
tap_exchangerate/schemas/: time-series.schema.json
