[metadata]
name = tap-exchangerate
version = 1.0.0
description = "Singer.io tap for extracting data"
py_modules = ["tap_exchangerate"],
install_requires = requests

[options]
include_package_data = True

[options.entry_points]
console_scripts =
    tap-exchangerate = tap_exchangerate.__main__:main


[options.package_data]
schemas = tap_exchangerate/schemas/*.json

